tests/functionalTests/valid/code/feather_sleep.hs
main :: IO ();
main = do {
    tinySleep 2000;

    putStr "Start\n";
    tinySleep 2000;
    putStr "The end\n";
};